Fixed missing background color
This was removed while fixing some issues with the default styling, but
we still need it.

--- a/css/src/parts/_base.scss
+++ b/css/src/parts/_base.scss
@@ -28,6 +28,7 @@
 	}
 
 	.featherlight-content {
+		background: #fff;
 		position: relative;
 		text-align: left;
 		vertical-align: middle;
